[gd_scene load_steps=6 format=3 uid="uid://cty52cy5r84dg"]

[ext_resource type="AudioStream" uid="uid://djejtfpy3igxh" path="res://assets/audio/crash02.ogg" id="1"]
[ext_resource type="Script" path="res://src/utils/audio-machine/AudioMachine.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://cb6nx8s1j7sx7" path="res://assets/audio/heist.ogg" id="4"]
[ext_resource type="AudioStream" uid="uid://bhfm8d5bxyq25" path="res://assets/audio/snare02.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://clcl7nj33hdgf" path="res://assets/audio/snare05.ogg" id="6"]

[node name="AudioMachine" type="Node2D"]
process_mode = 3
position = Vector2(360, 624)
script = ExtResource("2")

[node name="Hit1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")
pitch_scale = 0.81
bus = &"Sfx"

[node name="Hit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
bus = &"Sfx"

[node name="Hit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1")
pitch_scale = 1.2
bus = &"Sfx"

[node name="Play" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1")
pitch_scale = 1.2
bus = &"Sfx"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
autoplay = true
bus = &"Music"
